social media card

--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+    <!-- information fo rcocial media "card" type sharing -->
+    <!--facebook -->
+    <meta property="og:title" content="Koala Clicker">
+    <meta property="og:description" content="Have fun clicking a koala, win prizes.">
+    <meta property="og:image" content="koala.png">
+    <meta property="og:url" content="my gh">
+    <meta property="og:type" content="website">
+    
+    <!--twitter-->
+    <meta property="twitter:title" content="Koala Clicker">
+    <meta property="twitter:description" content="Have fun clicking a koala, win prizes.">
+    <meta property="twitter:image" content="koala.png">
+    <meta property="twitter:card" content="summary_large_image">
+    
 	<meta name="viewport" content="width=device-width, intial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Koala Clicker</title>
